top navigation first commit

--- a/findly-builder/src/app/components/add-source/add-source.component.html
+++ b/findly-builder/src/app/components/add-source/add-source.component.html
@@ -39,6 +39,7 @@
     </div>
   </perfect-scrollbar>
 </div>
+<!--old model code-->
 <!-- <kr-modal modalType="default" #statusModalPop>
   <div class="status-modal-popup">
     <div class="modal_content" *ngIf="selectedSourceType">
@@ -119,7 +120,7 @@
 </kr-modal> -->
 
 <!--Status popup-->
-<kr-modal modalType="default" #statusModalPop>
+<kr-modal modalType="default"  #statusModalPop>
   <div class="status-modal-popup">
     <div class="modal_content" *ngIf="selectedSourceType">
       <div class="modal-header">{{selectedSourceType.name}} <img src="assets/images/close.svg"
