--- a/findly-builder/src/app/components/add-source/add-source.component.html
+++ b/findly-builder/src/app/components/add-source/add-source.component.html
@@ -258,6 +258,7 @@
                     <div class="actions-data col-6 p-0 d-flex align-items-center justify-content-end">
                         <span class="sample-text pr-2" style="padding-right:10px" (click)='downloadSampleData("json")'><img  class="image mr-2"src="assets/icons/docker/download.svg">Sample JSON</span>
                         <span class="sample-text pl-2" (click)='downloadSampleData("csv")'><img class="image mr-2" src="assets/icons/docker/download.svg">Sample CSV</span>
+                        <div class="data">You can upload either JSON or CSV file here</div>
                     </div>
                     </div>
                     <div class="kr-sg-input-text-area mb-4">
