--- a/findly-builder/src/app/components/add-source/add-source.component.scss
+++ b/findly-builder/src/app/components/add-source/add-source.component.scss
@@ -25,6 +25,10 @@
     line-height: 17px;
     font-weight: 500;
 }
+.data{
+    color: gray;
+    font-size: 13px;
+}
 .back-up {
     text-align: right;
     top:25px;
