--- a/findly-builder/src/app/components/field-management/field-management.component.html
+++ b/findly-builder/src/app/components/field-management/field-management.component.html
@@ -216,19 +216,19 @@
                 <div class="label-text mb-2">Select ones that apply</div>
                 <div class="kr-sg-checkbox">
                     <input id="checkbox_grpfd" class="checkbox-custom" type="checkbox" [(ngModel)]="newFieldObj.isMultiValued">
-                    <label for="checkbox_grpfd" class="checkbox-custom-label">Multi-Valued</label>
+                    <label for="checkbox_grpfd" class="checkbox-custom-label">Multi-Valued</label><span  placement="bottom" ngbTooltip="Document might contain multiple values for this field" [container]="'body'" tooltipClass="dashboard-custom-tooltips" class="pl-1"><img class="ml-2" src="assets/icons/Info_gray.svg"></span>
                 </div>
                 <div class="kr-sg-checkbox">
                     <input id="checkbox_grpf" class="checkbox-custom" type="checkbox" [(ngModel)]="newFieldObj.isRequired">
-                    <label for="checkbox_grpf" class="checkbox-custom-label">Required</label>
+                    <label for="checkbox_grpf" class="checkbox-custom-label">Required</label><span  placement="bottom" ngbTooltip="Documents that do not contain value for this field will be rejected" [container]="'body'" tooltipClass="dashboard-custom-tooltips" class="pl-1"><img class="ml-2" src="assets/icons/Info_gray.svg"></span>
                 </div>
                 <div class="kr-sg-checkbox">
                     <input id="checkbox_grpd"  class="checkbox-custom" type="checkbox" [(ngModel)]="newFieldObj.isStored" (change)="newFieldObj.isIndexed = newFieldObj.isStored;">
-                    <label for="checkbox_grpd" class="checkbox-custom-label">Stored</label>
+                    <label for="checkbox_grpd" class="checkbox-custom-label">Stored</label><span  placement="bottom" ngbTooltip="Value of the field can be fetched by the search queries" [container]="'body'" tooltipClass="dashboard-custom-tooltips" class="pl-1"><img class="ml-2" src="assets/icons/Info_gray.svg"></span>
                 </div>
                 <div class="kr-sg-checkbox">
                     <input id="checkbox_grpe" class="checkbox-custom" type="checkbox" [(ngModel)]="newFieldObj.isIndexed" (change)="newFieldObj.isIndexed?(newFieldObj.isStored=true):return">
-                    <label for="checkbox_grpe" class="checkbox-custom-label">Indexed</label>
+                    <label for="checkbox_grpe" class="checkbox-custom-label">Indexed</label><span  placement="bottom" ngbTooltip="Value of the field can be used in search queries to fetch matched documents" [container]="'body'" tooltipClass="dashboard-custom-tooltips" class="pl-1"><img class="ml-2" src="assets/icons/Info_gray.svg"></span>
                 </div>
             </div>
             <div class="kr-sg-input-text col-10 p-0  d-none">
