--- a/findly-builder/src/app/components/synonyms/synonyms.component.scss
+++ b/findly-builder/src/app/components/synonyms/synonyms.component.scss
@@ -281,6 +281,7 @@
                 margin: 0;
                 padding: 0;
                 border: 0;
+                background: #ffff;
                 .mat-chip-list{
                     .mat-chip-list-wrapper{
                         border-radius: 3px;
