--- a/findly-builder/src/app/components/add-result/add-result.component.scss
+++ b/findly-builder/src/app/components/add-result/add-result.component.scss
@@ -42,6 +42,9 @@
             font-weight: 500;
             font-size: 12px;
         }
+        .sel-bold{
+            font-weight: 600;
+        }
     }
     .search{
         margin: 5% 4% 1% 4%;
