--- a/findly-builder/src/app/components/add-result/add-result.component.html
+++ b/findly-builder/src/app/components/add-result/add-result.component.html
@@ -8,7 +8,20 @@
         <!-- <div class= "txt">Result Type</div> -->
         <div class="check-option">
             <!-- BUTTONS START HERE -->
-            <div class="group-radiobutton">
+            <div class="kr-sg-dropdowns">
+                <div class="label-text">Result Type</div>
+                <div class="dropdown dropdown-open">
+                    <button class="dropdown-toggle dropdown-input" data-toggle="dropdown">{{searchRadioTypeTxt}}</button>                                            
+                    <ul class="dropdown-menu content-menu">
+                      <li (click) = "resultClick('faq')"><a [ngClass]="{'sel-bold' : searchRadioTypeTxt == 'FAQ'}">FAQ</a></li>
+                      <li (click) = "resultClick('content')"><a [ngClass]="{'sel-bold' : searchRadioTypeTxt == 'Content'}">Content</a></li>
+                      <li (click) = "resultClick('task')"><a [ngClass]="{'sel-bold' : searchRadioTypeTxt == 'Bot Action'}">Bot Action</a></li>
+                      <li (click) = "resultClick('structuredData')"><a [ngClass]="{'sel-bold' : searchRadioTypeTxt == 'Structured Data'}">Structured Data</a></li>
+                      <li (click) = "resultClick('all')"><a [ngClass]="{'sel-bold' : searchRadioTypeTxt == 'Any'}">Any</a></li>
+                    </ul>
+                  </div>
+            </div>
+            <!-- <div class="group-radiobutton">
                 <div class="heading-title txt">Result Type</div>
                 <div class="kr-sg-radiobutton radiobutton">
                     <input id="radio-1" name="radio" class="radio-custom" type="radio" [(ngModel)] = "searchRadioType" value = "faq" (click) = "resultClick('faq')">
@@ -26,11 +39,7 @@
                     <input id="radio-4" name="radio" class="radio-custom" type="radio" [(ngModel)] = "searchRadioType"  value = "all" (click) = "resultClick('all')">
                     <label for="radio-4" class="radio-custom-label">Any</label>
                 </div>
-                <!-- <div class="kr-sg-radiobutton radiobutton ">
-                    <input id="radio-4" name="radio" class="radio-custom" type="radio" (click) = "resultClick('any')">
-                    <label for="radio-4" class="radio-custom-label">Any</label>
-                </div> -->
-            </div> 
+            </div>  -->
             <!-- BUTTONS ENDS HERE -->
         </div>
     </div>
@@ -99,7 +108,15 @@
                                     <input  [attr.id]="i"  class="checkbox-custom selectEachfaqInput" type="checkbox" autocomplete="off" (click)="addRecord(result,i)">
                                     <label [attr.for]="i" class="checkbox-custom-label"></label>
                                 </div>
-                                <div class="title-desc-sec">
+                                <div class="title-desc-sec" *ngIf="result.__contentType == 'page'">
+                                    <div class="title">{{ result.pageTitle}}</div>
+                                    <div class="desc" >{{ result.searchResultPreview}}</div>
+                                </div>
+                                <div class="title-desc-sec" *ngIf="result.__contentType == 'faq'">
+                                    <div class="title">{{ result.question}}</div>
+                                    <div class="desc" >{{ result.answer}}</div>
+                                </div>
+                                <div class="title-desc-sec" *ngIf="result.__contentType == 'task'">
                                     <div class="title">{{ result.title}}</div>
                                     <div class="desc" >{{ result.searchResultPreview}}</div>
                                 </div>
@@ -118,8 +135,8 @@
                                         </div>
                                         <div class="title-desc-sec">
                                             <!-- <div class="title">{{ data._source.pageTitle}}</div> -->
-                                            <div class="title">{{ result.title }}</div>
-                                            <div class="desc" *ngIf="result.searchResultPreview;else body">{{ result.searchResultPreview}}</div>
+                                            <div class="title">{{ result.pageTitle }}</div>
+                                            <div class="desc" *ngIf="result.pageSearchResultPreview;else body">{{ result.pageSearchResultPreview}}</div>
                                             <ng-template #body>
                                                 <div class="desc">{{result.searchResultPreview}}</div>
                                             </ng-template>
@@ -143,6 +160,18 @@
         </div>
        </ng-container>
     </perfect-scrollbar>
+         <!-- record position -->
+         <div class="group-radiobutton" *ngIf="recordArray.length">
+            <div class="kr-sg-radiobutton">
+                <input id="radio-last" name="radio" class="radio-custom" type="radio" checked>
+                <label for="radio-last" class="radio-custom-label">Add to the last</label>
+            </div>
+            <div class="kr-sg-radiobutton">
+                <input id="radio-top" name="radio" class="radio-custom" type="radio">
+                <label for="radio-top" class="radio-custom-label">Add to the top</label>
+            </div>
+        </div> 
+        <!--record position -->
     <div class="footer row">
         <div class="col-7">
             <span class="desc" *ngIf="recordArray.length" >{{ recordArray.length }} results selected</span>
