FLY-1436 business rules checkbox issue fixed

--- a/findly-builder/src/app/components/business-rules/business-rules.component.html
+++ b/findly-builder/src/app/components/business-rules/business-rules.component.html
@@ -11,7 +11,7 @@
                 {{ selcectionObj.selectedCount }} {{ "businessRules.rules_selected" | translate }}
             </div>
             <div class="kr-sg-checkbox m-0" *ngIf="selcectionObj.selectAll">
-                <input id="checkbox-1" class="checkbox-custom" type="checkbox" checked/>
+                <input id="checkbox-1" class="checkbox-custom" type="checkbox" [(ngModel)]="selcectionObj.selectAll" (change)="selectAll()"/>
                 <label for="checkbox-1" class="checkbox-custom-label"></label>
                 <span class="allselected">{{"businessRules.all_rules_selected" | translate}}</span>
             </div>
