--- a/findly-builder/src/app/components/result-ranking/result-ranking.component.html
+++ b/findly-builder/src/app/components/result-ranking/result-ranking.component.html
@@ -1,12 +1,12 @@
 <div class="faqmain-container">
-    <div class="mainLoadingSpinner" *ngIf="loadingContent" >
+    <div class="mainLoadingSpinner" *ngIf="loadingContent">
         <mat-spinner diameter="18" strokeWidth="2"></mat-spinner>
         <span class="please-wait-message">{{'please_wait' | translate}}</span>
     </div>
-    <div class="header-sec col-12 row m-0" *ngIf="collectedRecord.length===0 && !nextPage">
+    <div class="header-sec col-12 row m-0" *ngIf="!nextPage&&!loadingContent">
         <div class="col-4 p-0">Result Ranking</div>     
         </div>
-    <ng-container *ngIf="collectedRecord.length===0 && !nextPage">
+    <ng-container *ngIf="!nextPage&&!loadingContent">
         <perfect-scrollbar class="empty-scroll">
         <div  class="empty-landing-screen" >
           <div class="img-block"*ngIf="!emptyItems"><img class="action_icon" src="assets/images/resultRanking-empty.svg"></div>
@@ -22,7 +22,6 @@
     </perfect-scrollbar>  
   </ng-container>
   <div *ngIf="nextPage">
-    <div *ngIf="!loadingContent">
         <div class="faqsListContainer">
             <div class="faq-content-boxes">
                 <div class="content left-content">
@@ -245,7 +244,7 @@
                     </div>
                 </div>
             </div>        
-        </div>
+
         <!-- <div class="log_section " [ngClass] ="{'d-none' : !resultLogs}">
             <div class="header-log">
                 <div class="title">Log ({{customizeLog.length || 0}})</div>
