--- a/findly-builder/src/app/scss/bt-styleguide.scss
+++ b/findly-builder/src/app/scss/bt-styleguide.scss
@@ -1194,6 +1194,29 @@ and open the template in the editor.
 
 .kr-sg-dropdowns{    
     width: 100%;
+    &.show{
+        .dropdown-open{
+            .dropdown-input{
+                &::before{
+                    content: "";                  
+                    position: absolute;
+                    line-height: 34px;
+                    font-size: 18px;
+                    height: 100%;
+                    top: 0;
+                    right: 10px;
+                    color: $primaryColor;
+                    transition: all 0.3s ease-in;
+                    z-index: 99;   
+                    background-image: url('^assets/icons/carrot-up-comp.svg') !important;                
+                    background-size: 14px;
+                    background-repeat: no-repeat; 
+                    background-position: center;
+                    width: 14px;                     
+                }
+            }
+        }               
+    }
     &.w-100{
         width: 100%;
     }
