--- a/findly-builder/src/app/components/search-experience/search-experience.component.scss
+++ b/findly-builder/src/app/components/search-experience/search-experience.component.scss
@@ -186,14 +186,14 @@
                             height: 100%;
                             line-height: 30px;
                         }
-                        &:disabled{
-                            background: #EFF0F1;
-                            color: #BDC1C6;
-                            border-radius: 4px;
-                            font-weight: normal;
-                            font-size: 14px;
-                            line-height: 20px;
-                        }
+                        // &:disabled{
+                        //     background: #EFF0F1;
+                        //     color: #BDC1C6;
+                        //     border-radius: 4px;
+                        //     font-weight: normal;
+                        //     font-size: 14px;
+                        //     line-height: 20px;
+                        // }
                         &.read-mode{
                             background: #EFF0F1;
                             color: #BDC1C6;
@@ -230,6 +230,7 @@
                                 padding: 0;
                                 height: 100%;
                                 border-radius: 0;
+                                cursor: pointer;
                             }
                         }
                     }
@@ -285,7 +286,8 @@
                         }
                     }
                 }
-                .button-enable{                    
+                .button-enable{   
+                    margin: 30px 0;               
                     .kr-sg-input-text{
                         margin: 30px 0;
                         width: 200px;
