--- a/findly-builder/src/app/components/facets/facets.component.html
+++ b/findly-builder/src/app/components/facets/facets.component.html
@@ -54,13 +54,13 @@
         <ng-container *ngIf="!(facets && facets.length) && !loadingContent">
             <perfect-scrollbar class="empty-scroll">
                 <div class="empty-landing-screen">
-                    <div class="img-block" *ngIf="!emptyItems"><img class="action_icon" src="assets/images/facets-empty.svg"></div>
+                    <div class="img-block" *ngIf="!emptyItems"><img class="action_icon" (load)="imageLoad()" src="assets/images/facets-empty.svg"></div>
                     <ng-container>
                         <div class="empty-title">You haven’t added any Facets yet!</div>
                         <div class="desc-text">Facets allow search users to refine their search results by selecting appropriate filters. SearchAssist allows you to add value and range facets, and you can configure any indexed fields as facets.
                         </div>
                         <div class="kr-sg-dropdowns" ngbDropdown [container]="'body'">
-                            <button class="kr-sg-button-primary" (click)="createNewFacet()">Add Facets</button>
+                            <button class="kr-sg-button-primary btn_lg px-3" (click)="createNewFacet()">Add Facets</button>
                         </div>
                     </ng-container>
                     <ng-container *ngIf="noItems && emptySearchResults">
